--- a/sass/base.scss
+++ b/sass/base.scss
@@ -11,8 +11,17 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
-@media screen and (max-width: 320px) {
-    html {
-      width: 320px;
-    }
+.padding-main {
+  padding: 0 22px;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+@media screen and (max-width: 349px) {
+html {
+  width: 349px;
   }
+}
