--- a/style.css
+++ b/style.css
@@ -10,9 +10,18 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
-@media screen and (max-width: 320px) {
+.padding-main {
+  padding: 0 22px;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+@media screen and (max-width: 349px) {
   html {
-    width: 320px;
+    width: 349px;
   }
 }
 header h1 {
@@ -20,10 +29,199 @@ header h1 {
   text-align: center;
   padding: 9px 0px 3px 0px;
   margin: 0;
-  box-shadow: 0px 3px 0px #DDDDDD;
+  box-shadow: 0px 3px 0px #dddddd;
   position: relative;
   font-size: 29px;
   cursor: pointer;
+}
+
+.recherche {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #eaeaea;
+  gap: 17px;
+  padding: 16px 26px 15px 0px;
+}
+.recherche i {
+  padding-bottom: 3px;
+  font-size: 16px;
+  cursor: pointer;
+}
+.recherche h2 {
+  font-weight: 500;
+  font-size: 16px;
+  margin: 0;
+}
+
+/*EXPLORER*/
+.explorer {
+  align-items: center;
+  text-align: center;
+  background-color: #f6f6f6;
+}
+.explorer h2 {
+  font-size: 24px;
+  padding-top: 38px;
+  margin: 0;
+}
+.explorer p {
+  font-size: 18px;
+  font-weight: 300;
+  margin-top: 12px;
+}
+.explorer button {
+  border-radius: 50px;
+  padding: 14px 20px;
+  font-size: 16px;
+  font-weight: 600;
+  background-image: linear-gradient(170deg, #FF79DA, #9356DC);
+  color: white;
+  border: none;
+  cursor: pointer;
+  margin: 10px 0 58px 0;
+  transition: transform 200ms;
+  box-shadow: 0px 5px 5px #cecece;
+}
+.explorer button:hover {
+  transform: scale(1.04);
+}
+
+@media screen and (min-width: 768px) {
+  .explorer br {
+    display: none;
+  }
+}
+/*FONCTIONNEMENT*/
+.fonctionnement {
+  counter-reset: steps;
+}
+.fonctionnement h2 {
+  margin-top: 52px;
+  margin-bottom: 32px;
+}
+.fonctionnement ol {
+  display: flex;
+  gap: 24px;
+  padding: 0;
+  margin: 0;
+}
+@media screen and (max-width: 945px) {
+  .fonctionnement ol {
+    flex-direction: column;
+  }
+}
+.fonctionnement li {
+  position: relative;
+  list-style-type: none;
+  background-color: #f6f6f6;
+  padding: 26px 36px;
+  flex-grow: 1;
+  border-radius: 10px;
+  transition: transform 200ms;
+  box-shadow: 0px 5px 5px #ececec;
+}
+.fonctionnement li::before {
+  content: counter(steps);
+  counter-increment: steps;
+  color: white;
+  background-color: #9256dc;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 22px;
+  width: 22px;
+  position: absolute;
+  left: -10px;
+  font-size: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.fonctionnement li:hover {
+  transform: scale(1.02);
+}
+.fonctionnement li i.fas {
+  color: #7e7e7e;
+  margin-right: 28px;
+  font-size: 20px;
+}
+
+.menus {
+  background-color: #f6f6f6;
+  margin-top: 66px;
+}
+.menus h2 {
+  margin: 0 0 28px 0;
+  padding-top: 58px;
+}
+.menus-cartes12 {
+  display: flex;
+  width: 100%;
+  padding-bottom: 20px;
+  gap: 20px;
+}
+@media screen and (max-width: 768px) {
+  .menus-cartes12 {
+    flex-direction: column;
+  }
+}
+.menus-cartes34 {
+  display: flex;
+  width: 100%;
+  gap: 20px;
+}
+@media screen and (max-width: 768px) {
+  .menus-cartes34 {
+    flex-direction: column;
+  }
+}
+.menus .nouveau {
+  position: relative;
+}
+.menus .nouveau::before {
+  content: "Nouveau";
+  position: absolute;
+  background-color: #99e2d0;
+  color: #078b6b;
+  font-size: 14px;
+  font-weight: 600;
+  padding: 7px 10px;
+  right: 15px;
+  top: 15px;
+}
+
+.carte {
+  height: 250px;
+  flex-grow: 1;
+  width: 100%;
+  background-color: white;
+  border-radius: 15px;
+}
+.carte-image {
+  width: 100%;
+  height: 175px;
+  object-fit: cover;
+  border-radius: 15px 15px 0 0;
+}
+.carte-description {
+  position: relative;
+}
+.carte-description h3 {
+  margin: 10px 10px 5px 10px;
+  font-size: 18px;
+}
+.carte-description p {
+  margin: 5px 10px 10px 10px;
+  font-size: 16px;
+  font-weight: 100;
+}
+.carte-description i {
+  font-size: 26px;
+  position: absolute;
+  right: 20px;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 /*# sourceMappingURL=style.css.map */
