--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,14 @@
-@import "./sass/base";
-@import "./sass/layouts/header";
+@use "./sass/base";
+@use "./sass/layouts/header";
+@use "./sass/layouts/recherche";
+@use "./sass/layouts/explorer";
+@use "./sass/layouts/fonctionnement";
+@use "./sass/layouts/menus";
+
+
+
+  
+  
 
 
 
