Modification main + ajout du footer

--- a/style.scss
+++ b/style.scss
@@ -4,6 +4,7 @@
 @use "./sass/layouts/explorer";
 @use "./sass/layouts/fonctionnement";
 @use "./sass/layouts/menus";
+@use "./sass/layouts/footer";
 
 
 
