--- a/sass/layouts/menus.scss
+++ b/sass/layouts/menus.scss
@@ -1,6 +1,9 @@
+/*MENUS*/
+
 .menus {
     background-color: #f6f6f6;
     margin-top: 66px;
+    padding-bottom: 60px;
     & h2 {
         margin: 0 0 28px 0;
         padding-top: 58px;
@@ -51,12 +54,13 @@
         }
         &-description {
             position: relative;
+            margin-top: -4px;
             & h3 {
-                margin: 10px 10px 5px 10px;
+                margin: 10px 0 5px 10px;
                 font-size: 18px;
             }
             & p {
-                margin: 5px 10px 10px 10px;
+                margin: 5px 0 10px 10px;
                 font-size: 16px;
                 font-weight: 100;
             }
@@ -66,6 +70,18 @@
                 right: 20px;
                 top: 50%;
                 transform: translateY(-50%);
+            }
+            & .fas {
+                color: transparent;
+                background-image: linear-gradient(#9356DC, #FF79DA);
+                background-clip: text;
+                -webkit-background-clip: text;
+                opacity: 0;
+                transition: all 200ms;
+            }
+            & .fas:hover {
+                opacity: 1;
+                transform: translateY(-50%) scale(1.1);
             }
         }
     }
