--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ a {
     width: 349px;
   }
 }
+/*HEADER*/
 header h1 {
   font-family: "Shrikhand", cursive;
   text-align: center;
@@ -35,6 +36,7 @@ header h1 {
   cursor: pointer;
 }
 
+/*RECHERCHE*/
 .recherche {
   display: flex;
   justify-content: center;
@@ -147,9 +149,11 @@ header h1 {
   font-size: 20px;
 }
 
+/*MENUS*/
 .menus {
   background-color: #f6f6f6;
   margin-top: 66px;
+  padding-bottom: 60px;
 }
 .menus h2 {
   margin: 0 0 28px 0;
@@ -206,13 +210,14 @@ header h1 {
 }
 .carte-description {
   position: relative;
+  margin-top: -4px;
 }
 .carte-description h3 {
-  margin: 10px 10px 5px 10px;
+  margin: 10px 0 5px 10px;
   font-size: 18px;
 }
 .carte-description p {
-  margin: 5px 10px 10px 10px;
+  margin: 5px 0 10px 10px;
   font-size: 16px;
   font-weight: 100;
 }
@@ -222,6 +227,54 @@ header h1 {
   right: 20px;
   top: 50%;
   transform: translateY(-50%);
+}
+.carte-description .fas {
+  color: transparent;
+  background-image: linear-gradient(#9356DC, #FF79DA);
+  background-clip: text;
+  -webkit-background-clip: text;
+  opacity: 0;
+  transition: all 200ms;
+}
+.carte-description .fas:hover {
+  opacity: 1;
+  transform: translateY(-50%) scale(1.1);
+}
+
+/*FOOTER*/
+footer {
+  background-color: #353535;
+  color: white;
+  padding: 24px 0 30px 22px;
+}
+footer h2 {
+  font-family: "Shrikhand", cursive;
+  font-weight: 500;
+  font-size: 18px;
+  margin: 0;
+  padding: 0 0 10px 0;
+}
+footer a {
+  font-size: 14px;
+  font-weight: 400;
+}
+footer div {
+  padding: 4px 0;
+}
+footer .filtre-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 16px;
+  height: 16px;
+}
+footer .flex {
+  display: flex;
+  align-items: center;
+}
+footer .flex a {
+  padding-left: 10px;
+  font-weight: 500;
 }
 
 /*# sourceMappingURL=style.css.map */
