Finalisation du site ( page des menus, accueil)

--- a/style.scss
+++ b/style.scss
@@ -1,11 +1,11 @@
-@use "./sass/base";
+@use "./sass/utils/base";
 @use "./sass/layouts/header";
 @use "./sass/layouts/recherche";
 @use "./sass/layouts/explorer";
 @use "./sass/layouts/fonctionnement";
 @use "./sass/layouts/menus";
 @use "./sass/layouts/footer";
-
+@use "./sass/pages/resto";
 
 
   
