--- a/sass/layouts/menus.scss
+++ b/sass/layouts/menus.scss
@@ -4,6 +4,10 @@
     background-color: #f6f6f6;
     margin-top: 66px;
     padding-bottom: 60px;
+    & a:hover {
+        transform: scale(1.01);
+        transition: transform 500ms;
+    }
     & h2 {
         margin: 0 0 28px 0;
         padding-top: 58px;
@@ -85,4 +89,7 @@
             }
         }
     }
+
+
+
 
