--- a/style.css
+++ b/style.css
@@ -14,14 +14,44 @@ body {
   padding: 0 22px;
 }
 
+.border-menu1234 {
+  border-radius: 30px 30px 0 0;
+  margin-top: -50px;
+  position: relative;
+  background-color: #f6f6f6;
+}
+
 a {
   text-decoration: none;
   color: inherit;
 }
 
-@media screen and (max-width: 349px) {
+.loader {
+  position: fixed;
+  display: grid;
+  place-items: center;
+  background-color: #ffffff;
+  height: 100%;
+  inset: 0;
+  z-index: 1;
+  opacity: 0.9;
+  animation: disappear 200ms 2s forwards;
+  transform-origin: top;
+}
+.loader::after {
+  content: "";
+  height: 80px;
+  width: 80px;
+  border-right: 5px solid transparent;
+  border-top: 5px solid black;
+  border-radius: 50%;
+  animation: spin 1s infinite ease-in-out;
+  animation-iteration-count: 2;
+}
+
+@media screen and (max-width: 385px) {
   html {
-    width: 349px;
+    width: 385px;
   }
 }
 /*HEADER*/
@@ -33,7 +63,7 @@ header h1 {
   box-shadow: 0px 3px 0px #dddddd;
   position: relative;
   font-size: 29px;
-  cursor: pointer;
+  width: 100%;
 }
 
 /*RECHERCHE*/
@@ -108,7 +138,7 @@ header h1 {
   padding: 0;
   margin: 0;
 }
-@media screen and (max-width: 945px) {
+@media screen and (max-width: 980px) {
   .fonctionnement ol {
     flex-direction: column;
   }
@@ -154,6 +184,10 @@ header h1 {
   background-color: #f6f6f6;
   margin-top: 66px;
   padding-bottom: 60px;
+}
+.menus a:hover {
+  transform: scale(1.01);
+  transition: transform 500ms;
 }
 .menus h2 {
   margin: 0 0 28px 0;
@@ -275,6 +309,204 @@ footer .flex {
 footer .flex a {
   padding-left: 10px;
   font-weight: 500;
+}
+
+@keyframes appear {
+  0% {
+    transform: translateY(50%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+@keyframes disappear {
+  to {
+    transform: scale(0);
+  }
+}
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+#page-resto .flex-titre {
+  display: flex;
+  align-items: center;
+}
+#page-resto .flex-titre .arrow {
+  font-size: 29px;
+  position: relative;
+  margin-left: 10px;
+}
+#page-resto .img-resto1 {
+  max-height: 400px;
+  width: 100%;
+  object-fit: cover;
+}
+#page-resto .carte-description-flex {
+  display: flex;
+  position: relative;
+}
+#page-resto .carte-description-flex h2 {
+  font-family: "Shrikhand", cursive;
+  padding-left: 10px;
+  font-size: 29px;
+}
+#page-resto .carte-description-flex i {
+  font-size: 29px;
+  position: absolute;
+  right: 20px;
+  right: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+}
+#page-resto .carte-description-flex .fas {
+  color: transparent;
+  background-image: linear-gradient(#9356DC, #FF79DA);
+  background-clip: text;
+  -webkit-background-clip: text;
+  opacity: 0;
+  transition: all 200ms;
+}
+#page-resto .carte-description-flex .fas:hover {
+  opacity: 1;
+  transform: translateY(-50%) scale(1.1);
+}
+#page-resto .flex-menu {
+  gap: 40px;
+  background-color: #f6f6f6;
+  border-radius: 15px;
+}
+#page-resto article {
+  width: 100%;
+}
+#page-resto article h3 {
+  padding-left: 5px;
+  margin: 0;
+  font-size: 20px;
+  position: relative;
+  font-weight: 100;
+}
+#page-resto article h3::after {
+  content: "";
+  height: 5px;
+  width: 60px;
+  top: 30px;
+  left: 10px;
+  background-color: #99e2d0;
+  position: absolute;
+}
+#page-resto article .margin-menu {
+  margin: 20px 0 20px 0;
+  display: flex;
+  background-color: white;
+  border-radius: 15px;
+  overflow: hidden;
+  animation: appear 1s;
+  animation-fill-mode: both;
+}
+#page-resto article .margin-menu:nth-child(1) {
+  animation-delay: 100ms;
+}
+#page-resto article .margin-menu:nth-child(2) {
+  animation-delay: 200ms;
+}
+#page-resto article .margin-menu:nth-child(3) {
+  animation-delay: 300ms;
+}
+#page-resto article .margin-menu:nth-child(4) {
+  animation-delay: 400ms;
+}
+#page-resto article .margin-menu:nth-child(5) {
+  animation-delay: 500ms;
+}
+#page-resto article .margin-menu .flex-item {
+  overflow: hidden;
+}
+#page-resto article .margin-menu .flex-item h4 {
+  margin: 10px 0 10px 0;
+  padding-left: 10px;
+  font-size: 20px;
+  font-weight: 500;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+#page-resto article .margin-menu .flex-item p {
+  margin: 10px 0 10px 0;
+  padding-left: 10px;
+  font-size: 16px;
+  font-weight: 200;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+#page-resto article .margin-menu .prix {
+  font-weight: 500;
+  margin-left: auto;
+  display: flex;
+  align-items: flex-end;
+  margin-right: 20px;
+  margin-bottom: 10px;
+}
+#page-resto article .margin-menu .item-check {
+  background-color: #99e2d0;
+  margin-right: -60px;
+  width: 60px;
+  transition: margin-right 0.5s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  flex-shrink: 0;
+}
+#page-resto article .margin-menu .item-check i {
+  background: white;
+  aspect-ratio: 1/1;
+  width: 25px;
+  border-radius: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #99e2d0;
+}
+#page-resto article .margin-menu:hover .item-check {
+  margin-right: 0;
+}
+#page-resto article .margin-menu:hover .item-check i {
+  animation: quarterspin 0.5s ease-in-out;
+}
+@keyframes quarterspin {
+  0% {
+    transform: rotate(-270deg);
+  }
+  100% {
+    transform: rotate(0);
+  }
+}
+#page-resto section.commander {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#page-resto section.commander button {
+  border-radius: 50px;
+  padding: 14px 20px;
+  font-size: 16px;
+  font-weight: 600;
+  background-image: linear-gradient(170deg, #FF79DA, #9356DC);
+  color: white;
+  border: none;
+  cursor: pointer;
+  margin: 20px 0 58px 0;
+  transition: transform 200ms;
+  box-shadow: 0px 5px 5px #cecece;
+}
+#page-resto section.commander button:hover {
+  transform: scale(1.04);
 }
 
 /*# sourceMappingURL=style.css.map */
