--- a/style.css
+++ b/style.css
@@ -26,6 +26,10 @@ a {
   color: inherit;
 }
 
+.flex-menu h2, .commander h2 {
+  display: none;
+}
+
 .loader {
   position: fixed;
   display: grid;
