Création du dossier base pour "base.scss"

--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,4 @@
-@use "./sass/utils/base";
+@use "./sass/base";
 @use "./sass/layouts/header";
 @use "./sass/layouts/recherche";
 @use "./sass/layouts/explorer";
