Correction d'un bug avec sass

--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,4 @@
-@use "./sass/base";
+@use "./sass/base/base";
 @use "./sass/layouts/header";
 @use "./sass/layouts/recherche";
 @use "./sass/layouts/explorer";
