--- a/sass/utils/animations.scss
+++ b/sass/utils/animations.scss
@@ -1,12 +1,13 @@
-@keyframes quarterspin {
-    0% {
-        transform: rotate(-270deg);
-    }
-    100% {
-        transform: rotate(0);
+@mixin quarterspin {
+    @keyframes quarterspin {
+        0% {
+            transform: rotate(-270deg);
+        }
+        100% {
+            transform: rotate(0);
+        }
     }
 }
-
 @keyframes appear {
     0% {
         transform: translateY(50%);
