Changement dans la class .fonctionnement

--- a/sass/layouts/fonctionnement.scss
+++ b/sass/layouts/fonctionnement.scss
@@ -1,6 +1,7 @@
 /*FONCTIONNEMENT*/
 
 .fonctionnement {
+    counter-reset: steps;
     & h2 {
         margin-top: 52px;
         margin-bottom: 32px;
